--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-awesome-spinners": "^1.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-spinners": "^0.15.0",
